@@ -1,12 +1,11 @@
-package com.mazeymoos.cpc.commands;
+package uk.co.clovetwilight3.cpc.commands;
 
-import com.mazeymoos.cpc.ClovesPluralCraft;
+import uk.co.clovetwilight3.cpc.CpcMain;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
 import org.bukkit.entity.Player;
 
-import java.lang.reflect.Array;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -20,13 +19,13 @@ public class SystemCommandTabCompleter implements TabCompleter {
             return null; // No suggestions for the console mfs
         }
 
-       if (args.length == 1) {
-           return Arrays.asList("create", "rename", "remove"); // Main subcommands
-       } else if ((args[0].equalsIgnoreCase("create") || args[0].equalsIgnoreCase("rename")) && args.length == 2) {
-           return List.of("<Name>"); // Name input Placeholder
-       }
+        if (args.length == 1) {
+            return Arrays.asList("create", "rename", "remove"); // Main subcommands
+        } else if ((args[0].equalsIgnoreCase("create") || args[0].equalsIgnoreCase("rename")) && args.length == 2) {
+            return List.of("<Name>"); // Name input Placeholder
+        }
 
-       return null;
+        return null;
 
     }
 
